--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,20 @@
 .App {
   text-align: center;
+  box-sizing: border-box;
+  background-color: rgb(31, 31, 30);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.section-characteristics{
+  height: 200px;
+}
+.section-fill{
+  height: 1000px;
+  background-color: rgb(91, 91, 89);
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
