Adding some components
Add profile components
Add first iteration components "Initiative, Armor, Speed, Proficiency"
Check layout sub section.

--- a/src/components/Characteristics/Other/Armor.module.css
+++ b/src/components/Characteristics/Other/Armor.module.css
@@ -6,10 +6,9 @@
     align-items: center;
     border: 2px solid hsl(0, 100%, 50%);
     background-color: hsl(0, 0%, 100%);
+    width: 80px;
+    height: 90px;
     border-radius: 20px;
-    margin-right: 1rem;
-    width: 90px;
-    height: 80px;
     box-sizing: border-box;
 }
 .heading{
@@ -17,27 +16,11 @@
     font-size: 1rem;
     color: hsl(0, 0%, 35%);
 }
-.modContainer{
-    position: relative;
+.modifier{
     font-size: 1.6rem;
     font-weight: 500;
 }
-.sign{
-    position: absolute;
-    left: -1rem;
-    color: hsl(0, 0%, 35%);
-}
-.modifier{
-
-}
-.value{
-    margin-top: -1rem;
-    font-size: 1.2rem;
-    font-weight: 600;
-    position: relative;
-    top: 1rem;
-    border: 2px solid red;
-    border-radius: 20px;
-    width: 40%;
-    background: white;
+.footer{
+    margin-bottom: 0;
+    font-weight: 500;
 }
