--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,9 @@
   background-color: rgb(31, 31, 30);
 }
 .section-characteristics{
-  height: 200px;
-}
-.section-fill{
-  height: 1000px;
-  background-color: rgb(91, 91, 89);
+  display: flex;
+  flex-direction: column;
+  margin: 2rem 10rem 0 10rem;
 }
 
 @media (prefers-reduced-motion: no-preference) {
