--- a/src/components/Characteristics/Characteristics.module.css
+++ b/src/components/Characteristics/Characteristics.module.css
@@ -2,7 +2,16 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    height: inherit;
+    margin-bottom: 2rem;
+}
+.left{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     height: inherit;
 }
