--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,6 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    padding: 0.5rem 9rem;
   }
   .appLogo{
     width: 200px;
